# nonconvexAG

./: .gitignore  LM_SCAD_MCP_cp_MODULE.ipynb  LM_SCAD_MCP_np.memmap_MODULE.ipynb  LM_SCAD_MCP_np.memmap_MODULE_parallel.ipynb  LM_SCAD_MCP_np_MODULE.ipynb  README.md  logistic_SCAD_MCP_cp_MODULE.ipynb  logistic_SCAD_MCP_np.memmap_MODULE.ipynb  logistic_SCAD_MCP_np.memmap_MODULE_parallel.ipynb  logistic_SCAD_MCP_np_MODULE.ipynb  markdown_table.tgn
.github/: tsa_endpoints.txt  tsa_endpoints_full.txt
.github/workflows/: codeql.yml  tests.yml  timestamp.yml
.ipynb_checkpoints/: LM_SCAD_MCP_cp_MODULE-checkpoint.ipynb  LM_SCAD_MCP_np.memmap_MODULE-checkpoint.ipynb  LM_SCAD_MCP_np.memmap_MODULE_parallel-checkpoint.ipynb  LM_SCAD_MCP_np_MODULE-checkpoint.ipynb  logistic_SCAD_MCP_cp_MODULE-checkpoint.ipynb  logistic_SCAD_MCP_np.memmap_MODULE-checkpoint.ipynb  logistic_SCAD_MCP_np.memmap_MODULE_parallel-checkpoint.ipynb  logistic_SCAD_MCP_np_MODULE-checkpoint.ipynb
nonconvexAG/: .flake8  README.md  pyproject.toml  pyproject.toml.old  pytest.ini  run_tests.py  setup.py
nonconvexAG/examples/: basic_usage.py
nonconvexAG/src/nonconvexAG/: __init__.py
nonconvexAG/src/nonconvexAG.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nonconvexAG/src/nonconvexAG/__pycache__/: __init__.soft_thresholding-36.py39.1.nbc
nonconvexAG/src/nonconvexAG/models/: __init__.py  base.py  linear.py  logistic.py
nonconvexAG/src/nonconvexAG/penalties/: __init__.py  l1.py  mcp.py  scad.py
nonconvexAG/src/nonconvexAG/solvers/: __init__.py  base.py  solution_path.py  strong_rule.py  uag.py
nonconvexAG/src/nonconvexAG/utils/: __init__.py  data_utils.py  lambda_utils.py  validation.py
nonconvexAG/tests/: README.md  conftest.py
nonconvexAG/tests/integration/: test_backward_compatibility.py  test_performance.py  test_solvers.py  test_solvers_comprehensive.py
nonconvexAG/tests/unit/: test_models.py  test_penalties.py  test_penalties_comprehensive.py  test_utils.py
nonconvex_restartingAG/: README.md  pyproject.toml
nonconvex_restartingAG/nonconvex_restartingAG/: __init__.py
nonconvex_restartingAG/nonconvex_restartingAG.egg-info/: PKG-INFO  SOURCES.txt
nonconvex_restartingAG/nonconvex_restartingAG/__pycache__/: __init__.soft_thresholding-36.py39.1.nbc  __init__.soft_thresholding-36.py39.nbi  __init__.soft_thresholding-39.py39.1.nbc  __init__.soft_thresholding-39.py39.nbi  np_ag.soft_thresholding-39.py39.1.nbc  np_ag.soft_thresholding-39.py39.nbi
nonconvex_restartingAG/src/nonconvex_restartingAG/: __init__.py
nonconvex_restartingAG/src/nonconvex_restartingAG.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nonconvex_restartingAG/src/nonconvex_restartingAG_kyang.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nonconvex_restartingAG/tests/: test.py
ots_proofs/: 9c0bea88484fe753475f4fb65e452f391bc7e7ca_sectigo.tsr  verify.sh
package/: pyproject.toml
package/src/nonconvex_restartingAG_kyang.egg-info/: PKG-INFO  SOURCES.txt
paper/: SageMath_algebra.ipynb  damping_lower_bound_plot.m  optimize_b_k.eps  optimize_b_k.m  tighter_damping_lower_bound.m  tighter_lower_bound_plot.eps  tighter_lower_bound_plot.m
paper/.ipynb_checkpoints/: SageMath_algebra-checkpoint.ipynb
paper/simulation study/: LM-SCAD-pv.eps  LM-fig_k_MCP.eps  LM-time_MCP.eps  LM-time_SCAD.eps  LM_SCAD_MCP_cp (cupy).ipynb  logistic-MCP-pv.eps  logistic_SCAD_MCP_cp (cupy).ipynb
paper/simulation study/SCAD_MCP/LM/: R_results_SCAD_signal_recovery.npy  ncvreg_LM_sim.R
paper/simulation study/SCAD_MCP/logistic/: R_results_MCP_signal_recovery.npy  R_results_SCAD_signal_recovery.npy
paper/simulation study/tasks/task1/: results_SCAD_signal_recovery.npy  task1.ipynb
paper/simulation study/tasks/task1speed/: SCAD_sim_results.npy
paper/simulation study/tasks/task2/: results_MCP_signal_recovery.npy  results_SCAD_signal_recovery.npy  task2.ipynb
paper/simulation study/tasks/task2speed/: task2speed.ipynb
paper/simulation_study/: LM-MCP-pv.eps  LM-SCAD-pv.eps  LM-fig_k_MCP.eps  LM-fig_k_SCAD.eps  LM-time_MCP.eps  LM-time_SCAD.eps  LM_SCAD_MCP_cp (cupy).ipynb  LM_SCAD_MCP_cp_(cupy).ipynb  LM_obj_fig_MCP.eps  LM_obj_fig_SCAD.eps  SCAD_MCP.eps  SCAD_MCP_concave.eps  job_submitter.sh  logistic-MCP-pv.eps  logistic-SCAD-pv.eps  logistic-fig_k_MCP.eps  logistic-fig_k_SCAD.eps  logistic_SCAD_MCP_cp (cupy).ipynb  logistic_SCAD_MCP_cp_(cupy).ipynb  logistic_obj_fig_MCP.eps  logistic_obj_fig_SCAD.eps  solution_path_LM_MCP.eps  solution_path_logistic_MCP.eps  summary.ipynb
paper/simulation_study/.ipynb_checkpoints/: LM_SCAD_MCP_cp (cupy)-checkpoint.ipynb  LM_SCAD_MCP_cp_(cupy)-checkpoint.ipynb  logistic_SCAD_MCP_cp (cupy)-checkpoint.ipynb  logistic_SCAD_MCP_cp_(cupy)-checkpoint.ipynb  summary-checkpoint.ipynb
paper/simulation_study/SCAD_MCP/LM/: .Rhistory  LM.sh  R_results_MCP_signal_recovery.npy  R_results_SCAD_signal_recovery.npy  ncvreg_LM_sim.R  slurm-10256385.out  slurm-10933899.out
paper/simulation_study/SCAD_MCP/logistic/: R_results_MCP_signal_recovery.npy  R_results_SCAD_signal_recovery.npy  logistic.sh  ncvreg_logistic_sim.R  slurm-10256384.out  slurm-10933900.out
paper/simulation_study/tasks/task1/: results_MCP_signal_recovery.npy  results_SCAD_signal_recovery.npy  slurm-10249685.out  slurm-10933901.out  task1.py  task1.sh
paper/simulation_study/tasks/task1speed/: (task1speed_MCP) slurm-9615089.out  (task1speed_SCAD) slurm-9615091.out  MCP_sim_results.npy  SCAD_sim_results.npy  seff-10249600.out  seff-10933903.out  slurm-10249600.out  slurm-10933903.out  task1speed.ipynb  task1speed.py  task1speed.sh
paper/simulation_study/tasks/task2/: results_MCP_signal_recovery.npy  results_SCAD_signal_recovery.npy  slurm-10249602.out  slurm-10933902.out  task2.ipynb  task2.py  task2.sh
(+72 files in other folders)
