[build-system]
requires = ["setuptools>=61.0", "numpy>=1.16.6", "numba>=0.54.1", "multiprocess>=0.70.6"]
build-backend = "setuptools.build_meta"

[project]
name = "nonconvexAG"
version = "0.9.3"
authors = [
  { name="Kai Yang", email="kai.yang2@mail.mcgill.ca" },
]
description = "Implementation of accelerated gradient algorithm with strong rules for (high-dimensional) nonconvex sparse learning problems. Restarting, memory-mapping, and multiprocessing are now available."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Kaiyangshi-Ito/nonconvexAG"
"Bug Tracker" = "https://github.com/Kaiyangshi-Ito/nonconvexAG/issues"
